--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -1,9 +1,29 @@
-button {
-  /* width: 100%; */
-} 
+html, body {
+  height: 100%;
+  width: 100%;
+  margin: 0px;
+  padding: 0px;
+  color: #FFF;
+}
 
 .container {
-  width: 400px;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(180deg,#1a1e5a 0,#122d98 100%);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.login-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.header-image {
+  background: url('./logo.png');
+  width: 600px;
+  height: 197px;
 }
 
 .permissionBox {
