--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -12,18 +12,56 @@ html, body {
   background: linear-gradient(180deg,#1a1e5a 0,#122d98 100%);
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  align-items: center;
+  justify-content: center;
 }
+
 
 .login-container {
   display: flex;
   flex-direction: column;
+  align-items: space-between;
+  justify-content: space-around;
+  width: 90%;
+  height: 70%;
 }
 
-.header-image {
-  background: url('./logo.png');
-  width: 600px;
-  height: 197px;
+.header-container {
+  
+}
+
+.bankselect-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.bank-item {
+  width: 70% !important;
+  height: 40px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  border-radius: 0px !important;
+  border-bottom: 1px solid #1c94ca;
+}
+
+.bank-item-last {
+  border-bottom-left-radius: 2px !important;
+  border-bottom-right-radius: 2px !important;
+  border-bottom: 0px solid #FAFAFA !important;
+}
+
+.choose-a-bank {
+  width: 70% !important;
+  height: 40px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  background-color: #FAFAFA !important;
+  border-radius: 2px !important;
 }
 
 .permissionBox {
