--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -21,9 +21,9 @@ html, body {
   display: flex;
   flex-direction: column;
   align-items: space-between;
-  justify-content: space-around;
+  justify-content: flex-start;
   width: 90%;
-  height: 70%;
+  height: 40%;
 }
 
 .header-container {
