--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -3,7 +3,7 @@ html, body {
   width: 100%;
   margin: 0px;
   padding: 0px;
-  color: #FFF;
+  color: #FEFEFE;
 }
 
 .container {
@@ -23,7 +23,7 @@ html, body {
   align-items: space-between;
   justify-content: flex-start;
   width: 90%;
-  height: 40%;
+  height: 60%;
 }
 
 .header-container {
@@ -62,6 +62,20 @@ html, body {
   align-items: center;
   background-color: #FAFAFA !important;
   border-radius: 2px !important;
+}
+
+.value-proposition {
+  text-align: center;
+  position: relative;
+  line-height: 30px !important;
+  top: 50px;
+}
+
+.value-tagline {
+  text-align: center;
+  position: fixed;
+  bottom: 0px;
+  left: 20px;
 }
 
 .permissionBox {
