--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -30,6 +30,10 @@ html, body {
   
 }
 
+.inputText:focus {
+  outline:none;
+}
+
 .bankselect-container {
   display: flex;
   flex-direction: column;
@@ -78,4 +82,27 @@ input {
 input[type=checkbox] {
   height: 20px;
   width: 20px;
+}
+
+.mdl-textfield__label:after {
+  background-color: yellow !important;
+  /* bottom: 20px; */
+  content: '';
+  /* height: 2px; */
+  left: 45%;
+  position: absolute;
+  /* transition-duration: .2s; */
+  transition-timing-function: cubic-bezier(.4,0,.2,1);
+  /* visibility: hidden; */
+  width: 10px;
+}
+
+.centerMargin {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.inputTextStyle {
+  border-bottom: 1px solid white;
+  font-size:20px;
 }
