--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -68,6 +68,10 @@ html, body {
   border-radius: 2px !important;
 }
 
+.border-radius {
+  border-radius: 2px !important
+}
+
 .permissionBox {
   display: flex;
   flex-direction: row;
@@ -103,6 +107,10 @@ input[type=checkbox] {
 }
 
 .inputTextStyle {
-  border-bottom: 1px solid white;
+  border-bottom: 1.5px solid white;
   font-size:20px;
+}
+
+.inputTextStyle::placeholder {
+  color:rgba(160,160,160,.5);
 }
