--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -76,7 +76,6 @@ html, body {
   border-radius: 2px !important;
 }
 
-
 .border-radius {
   border-radius: 2px !important
 }
@@ -95,6 +94,10 @@ html, body {
   left: 20px;
 }
 
+.safetycode-container {
+  
+}
+
 .permission-container {
   display: flex;
   flex-direction: column;
@@ -110,7 +113,7 @@ html, body {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  width: 90%;
+  width: 95%;
   color: rgba(0,0,0,.54);
   padding: 10px;
   font-weight: 700;
@@ -120,6 +123,7 @@ html, body {
   display: flex;
   border-top: rgba(0, 0, 0, 0.1);
   padding: 10px;
+  background-color: #f1f1f1
 }
 
 input {
