--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -95,7 +95,7 @@ html, body {
 }
 
 .safetycode-container {
-  
+  width: 100%;
 }
 
 .permission-container {
@@ -145,7 +145,7 @@ input[type=checkbox] {
   /* transition-duration: .2s; */
   transition-timing-function: cubic-bezier(.4,0,.2,1);
   /* visibility: hidden; */
-  width: 10px;
+  width: 100% !important;
 }
 
 .centerMargin {
@@ -160,4 +160,16 @@ input[type=checkbox] {
 
 .inputTextStyle::placeholder {
   color:rgba(160,160,160,.5);
+}
+
+.applicant-congrats {
+  margin-top: 25px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+h1 {
+  font-size: 24px;
+  text-align: center;
 }
